#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2012-02-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9997 released.

        * Added ending '#' in setuid_cmd so line numbers can
          be manually added via vi for debugging.


2012-02-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9996 released.

        * Added Domain User check for Makefile.PL.

        * Modified image_magick in fa_code_demo.pm in Distro.


2012-02-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9995 released.

        * Fixed Makefile.PL $main::VERSION.


2012-02-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9994 released.

        * Fix for --edit.

        * Makefile.PL fix.


2012-02-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9993 released.

        * Forcing Cygwin version to use Cygwin supplied
          BerkeleyDB 4.5 because of problems building BerkeleyDB
          5.3 from source.


2012-01-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9992 released.

        * Misc minor bug fixes.


2011-12-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9991 released.

        * Added more code for diff() functionality.


2011-12-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9990 released.

        * Added more code for diff() functionality.


2011-12-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9989 released.

        * Modified mirror() to do sync on two local directories.

        * Started diff() functionality.

