@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9997';
+our $VERSION='0.9998';
 
 
 use 5.005;
